implement overlay and basic win condition